--- a/blog_nextjs_auth/package.json
+++ b/blog_nextjs_auth/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
