--- a/blog_nextjs_auth/package.json
+++ b/blog_nextjs_auth/package.json
@@ -12,7 +12,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/node": "^20",
