--- a/blog_nextjs_auth/package.json
+++ b/blog_nextjs_auth/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
