--- a/blog_nextjs_auth/package.json
+++ b/blog_nextjs_auth/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.14",
     "bcryptjs": "^2.4.3",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.4"
