--- a/blog_nextjs_auth/package.json
+++ b/blog_nextjs_auth/package.json
@@ -14,6 +14,7 @@
     "@types/nodemailer": "^6.4.14",
     "bcryptjs": "^2.4.3",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.17",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
