openssl rand -base64 32

--- a/blog_nextjs_auth/.env.example
+++ b/blog_nextjs_auth/.env.example
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://<username>:<password>@localhost:5432/ blog_nextjs_auth?schema=public"
+
+# .env
+
+# Defining the secret key used for authentication
+AUTH_SECRET="8eQxIlc/uM9b8+0dG4RZz1UGIVLziD/qo6/pqajFovE="
