Step 19: Configuring Email Service for Development

--- a/blog_nextjs_auth/.env.example
+++ b/blog_nextjs_auth/.env.example
@@ -10,3 +10,10 @@ DATABASE_URL="postgresql://<username>:<password>@localhost:5432/ blog_nextjs_aut
 
 # Defining the secret key used for authentication
 AUTH_SECRET="8eQxIlc/uM9b8+0dG4RZz1UGIVLziD/qo6/pqajFovE="
+
+# .env
+
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORT=587
+MAIL_USERNAME="mailtrap-username"
+MAIL_PASSWORD="mailtrap-password"
